--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 	<tr>
 		<td><img src=graphs/worker-cache.png width=375 height=280><td>
+		<td><img src=graphs/file-hist.png width=375 height=280><td>
+		<td><img src=graphs/file-accum.png width=375 height=280><td>
 		<td><img src=graphs/performance.workers.png width=375 height=280><td> 
-		<td><img src=graphs/performance.workers-accum.png width=375 height=280><td> 
-		<td><img src=graphs/performance.tasks.png width=375 height=280><td>
 		<td><img src=graphs/performance.tasks-capacities.png width=375 height=280><td> 
 	</tr>
 
@@ -23,5 +23,11 @@
 		<td><img src=graphs/performance.transfer.png width=375 height=280><td> 
 		<td><img src=graphs/performance.times-stacked.png width=375 height=280><td>
 	</tr>
+
+	<tr>
+		<td><img src=graphs/performance.workers-accum.png width=375 height=280><td> 
+		<td><img src=graphs/performance.tasks.png width=375 height=280><td>
+	</tr>
+
 
 </table>
