--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 	<tr>
 		<td><img src=graphs/performance.workers-accum.png width=375 height=280><td> 
+		<td><img src=graphs/performance.workers-disk.png width=375 height=280><td> 
 		<td><img src=graphs/performance.tasks.png width=375 height=280><td>
 	</tr>
 
